# Extractor

./: .gitignore  Readme.md  gluePres.odp  install.sh
GenerateNewData/: Cargo.toml
GenerateNewData/src/: main.rs  main.rs~
infrastructure/: EtlDemo.tf  glue.tf  map.scala  scalaCode.scala  terraform.tfstate  terraform.tfstate.backup
infrastructure/examples/: glue.tf
