[package]
name = "GenerateNewData"
version = "0.1.0"
authors = ["sdrafahl <shanedrafahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = "0.6"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.6"
serde_derive = "1.0.101"