[package]
name = "GenerateNewData"
version = "0.1.0"
authors = ["sdrafahl <shanedrafahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.avro-rs]
version = "0.6"
features = ["snappy"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.6"
serde_derive = "1.0.101"
parity-snappy = "0.1.0"
base64 = "0.10.1"